manifest/objects/dlrs__LookupRollupSummaryLog__c.object
<CustomObject>
    <fields>
        <fullName>dlrs__ErrorMessage__c</fullName>
        <label>Error Message</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>dlrs__ParentId__c</fullName>
        <externalId>true</externalId>
        <label>Parent Id</label>
        <length>18</length>
        <required>true</required>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>dlrs__ParentObject__c</fullName>
        <label>Parent Object</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>dlrs__ParentRecord__c</fullName>
        <formula>HYPERLINK( dlrs__ParentId__c , &apos;Parent Record&apos;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Parent Record</label>
        <type>Text</type>
    </fields>
    <label>Lookup Rollup Summary Log</label>
    <listViews>
        <fullName>dlrs__All</fullName>
        <columns>NAME</columns>
        <columns>dlrs__ErrorMessage__c</columns>
        <columns>dlrs__ParentId__c</columns>
        <columns>dlrs__ParentObject__c</columns>
        <columns>dlrs__ParentRecord__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Lookup Rollup Summary Log Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Lookup Rollup Summary Logs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>